# aligned-vec

./: Cargo.toml  Justfile
examples/: alloc_zero.rs
src/: io.rs  lib.rs  raw.rs
tests/: compile_fail.rs
tests/ui/: copy_from_ptr_requires_unsafe.rs  copy_from_ptr_requires_unsafe.stderr
