[package]
name = "aligned-vec2"
version = "0.6.5"
edition = "2024"
rust-version = "1.85"
authors = ["sarah <>"]
description = "Aligned vector and box containers"
readme = "README.md"
repository = "https://github.com/shssoichiro/aligned-vec"
license = "MIT"
keywords = ["vec", "allocation", "box", "slice", "alignment"]

[dependencies]
equator = "0.6.0"
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
bincode = { version = "1" }
diol = "0.13.1"
trybuild = "1.0.116"

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unsafe_op_in_unsafe_fn = "allow"
